--- a/data/lang/vue.json
+++ b/data/lang/vue.json
@@ -1,6 +1,6 @@
 [
   {
     "title": "handale route eror",
-    "code": "{ path: '/404', name: '404', component: require('./views/_404').default }, // Redirect any unmatched routes to the 404 page. { path: '*', redirect: '404' }"
+    "code": "routes = {\n      path: '/404',\n      name: '404',\n      component: require('./views/_404').default\n    },\n    // Redirect any unmatched routes to the 404 page.\n    {\n      path: '*',\n      redirect: '404'\n    }"
   }
 ]
