--- a/public/data/lang/vue.json
+++ b/public/data/lang/vue.json
@@ -2,30 +2,30 @@
   "id": "vue",
   "title": "vue.js",
   "slug": "vue",
-  "description": "Vue.js Cheatsheet",
+  "description": "Vue.js Cheatsheet ofline",
   "theme": "#41B883",
-  "contents": [
+  "topics": [
     {
       "title": "Directives",
       "items": [
         {
-          "definition": "Show or hide elements programmatically",
+          "description": "Show or hide elements programmatically",
           "code": "v-if/v-show"
         },
         {
-          "definition": "HTML attribute binding",
+          "description": "HTML attribute binding",
           "code": "v-bind"
         },
         {
-          "definition": "Two-way way data binding",
+          "description": "Two-way way data binding",
           "code": "v-model"
         },
         {
-          "definition": "HTML event binding",
+          "description": "HTML event binding",
           "code": "v-on:click"
         },
         {
-          "definition": "List rendering",
+          "description": "List rendering",
           "code": "v-for"
         }
       ]
@@ -34,32 +34,32 @@
       "title": "Binding",
       "items": [
         {
-          "definition": "dynamic url binding",
+          "description": "dynamic url binding",
           "code": ":href='url'"
         },
         {
-          "definition": "dynamic url bingin",
+          "description": "dynamic url bingin",
           "code": ":class='{active: isActive}'"
         },
         {
-          "definition": "dynamic style binding",
+          "description": "dynamic style binding",
           "code": ":style='{color: activeColor}'"
         }
       ]
     },
     {
-      "title": "events",
+      "title": "Events",
       "items": [
         {
-          "definition": "Bind event on form submits",
+          "description": "Bind event on form submits",
           "code": "<form @submit.prevent='addUser'>..."
         },
         {
-          "definition": "ইভেন্ট একবার সংঘটিত করতে",
+          "description": "ইভেন্ট একবার সংঘটিত করতে",
           "code": "<a @click.once='doThis'></a>"
         },
         {
-          "definition": "Stop propagation on HTML elements",
+          "description": "Stop propagation on HTML elements",
           "code": "<a @click.stop='doThis'></a>"
         }
       ]
