add copy comp & add theme

--- a/public/data/lang/css.json
+++ b/public/data/lang/css.json
@@ -3,7 +3,7 @@
   "title": "CSS",
   "slug": "css",
   "description": "Usefull CSS cheetsheet",
-  "theme": "#42A5F5",
+  "theme": "#2965F1",
   "topics": [
     {
       "title": "Directives",
