--- a/public/data/lang/html.json
+++ b/public/data/lang/html.json
@@ -3,7 +3,7 @@
   "title": "HTML",
   "slug": "css",
   "description": "Usefull CSS cheetsheet",
-  "theme": "#42A5F5",
+  "theme": "#EF662A",
   "topics": [
     {
       "title": "Directives",
