--- a/public/data/lang/react.json
+++ b/public/data/lang/react.json
@@ -3,7 +3,7 @@
   "title": "react.js",
   "slug": "vue",
   "description": "React.js Cheatsheet ofline",
-  "theme": "#41B883",
+  "theme": "#53C1DE",
   "topics": [
     {
       "title": "Directives reactjs",
