update ui (border, side nav > theme)

--- a/public/data/lang/nodejs.json
+++ b/public/data/lang/nodejs.json
@@ -3,7 +3,7 @@
   "title": "node.js",
   "slug": "css",
   "description": "Usefull CSS cheetsheet",
-  "theme": "#42A5F5",
+  "theme": "#539E43",
   "topics": [
     {
       "title": "Directives",
