--- a/public/data/lang/css.json
+++ b/public/data/lang/css.json
@@ -6,32 +6,22 @@
   "theme": "#2965F1",
   "topics": [
     {
-      "title": "Directives",
+      "title": "Centering items",
       "items": [
         {
           "description": "Flex center",
           "code": ".flex-center {\n  display: flex;\n  justify-content: center;\n  align-items: center;\n}",
           "type": "css"
-        },
-        {
-          "description": "HTML attribute binding",
-          "code": "v-bind",
-          "type": "javascript"
         }
       ]
     },
     {
-      "title": "Binding",
+      "title": "CSS Selectors",
       "items": [
         {
-          "description": "dynamic url binding",
-          "code": ":href='url'",
-          "type": "javascript"
-        },
-        {
-          "description": "dynamic url bingin",
-          "code": ":class='{active: isActive}'",
-          "type": "javascript"
+          "description": "Same lavel element selector",
+          "code": "input[type='checkbox'] {\n  &:checked ~ ul.link-ul {\n    display: none;\n  }\n\n  &:not(:checked) ~ label i.arrow-down {\n    transform: rotate(0deg) !important;\n  }\n}",
+          "type": "css"
         }
       ]
     }
